@@ -1,7 +1,8 @@
 0.6.1 - currently working on
+- [#3056] Feature: E-mails have double line breaks
 - [#3080] Feature: Add an object factory
 - [#3068] Fix: Value of $functionName not quoted in the data mapper
-- [#2973] Fix: tx_oelib_List::purgeCurrent is not applicable within foreach loops 
+- [#2973] Fix: tx_oelib_List::purgeCurrent is not applicable within foreach loops
 
 0.6.0 - released 2009-06-05
 - [#2991] Feature: Add a test that fails if the phpmyadmin extension is installed
